Add deleted text
Add deleted text

--- a/kalai-sergiu/tema-1/index.html
+++ b/kalai-sergiu/tema-1/index.html
@@ -2,4 +2,7 @@
     <head>
         <title>Tickets to cinema</title>
     </head>
+    <body>
+        <del>This is deletede text</del>
+    </body>
 </html>
