--- a/kalai-sergiu/tema-1/index.html
+++ b/kalai-sergiu/tema-1/index.html
@@ -1,8 +1,13 @@
 <html>
     <head>
         <title>Tickets to cinema</title>
+        
     </head>
     <body>
-        <del>This is deletede text</del>
+        <form>
+            <fieldset>
+                
+            </fieldset>
+        </form>
     </body>
 </html>
