--- a/alina-popa/tema-1/index.html
+++ b/alina-popa/tema-1/index.html
@@ -24,8 +24,6 @@
         <input id="movie" name="movie" type="radio" />Rocketman
         <input id="movie" name="movie" type="radio" />Spider-man
 
-
-        </select>
         <legend>Choose location</legend>
         <select>
             <option>Cinema City Iulius </option>
@@ -35,7 +33,8 @@
         <label>
             <input name="terms" id="terms" type="checkbox">acceptTerms
         </label>
-        <button type="submit">Buy tickets</button>
+    </fieldset>
+    <button type="submit">Buy tickets</button>
 
 
 </body>
