--- a/alina-popa/tema-1/index.html
+++ b/alina-popa/tema-1/index.html
@@ -31,12 +31,11 @@
         </select>
         <legend>Terms and Conditions</legend>
         <label>
-            <input name="terms" id="terms" type="checkbox">acceptTerms
+            <input name="terms" id="terms" type="checkbox" />
+            I agree Terns&Conditions
         </label>
     </fieldset>
     <button type="submit">Buy tickets</button>
-
-
 </body>
 
 </html>
