--- a/kalai-sergiu/tema-1/index.html
+++ b/kalai-sergiu/tema-1/index.html
@@ -41,7 +41,7 @@
             <br>
             <fieldset>
                 
-                <label><input type="checkbox"/><a herf="termsandcontions.html">I accept terms and conditions</a></label>
+                <label><input type="checkbox"/>I accept terms and conditions</a></label>
             
             </fieldset>
             <br>
