--- a/kalai-sergiu/tema-1/index.html
+++ b/kalai-sergiu/tema-1/index.html
@@ -22,26 +22,26 @@
             <fieldset>
                 <legend>What movie do you want to see?</legend>
                     <legend>Chose a  movie:</legend>
-                    <label>Joker <input type="radio" value="movie" name="contactBy" /></label>
-                    <label> IT: Chapter twoo<input type="radio" value="movie" name="contactBy" /></label>
-                    <label>War <input type="radio" value="movie" name="contactBy" /></label>
-                    <label>Downtown Abbey <input type="radio" value="movie" name="contactBy" /></label>
+                    <label>Joker <input type="radio" value="joker" name="movie" /></label>
+                    <label> IT: Chapter twoo<input type="radio" value="it:chaptertwo" name="movie" /></label>
+                    <label>War <input type="radio" value="war" name="movie" /></label>
+                    <label>Downtown Abbey <input type="radio" value="downtownabbey" name="movie" /></label>
             </fieldset>
             <br>
             <fieldset>
                 <legend>Choose location</legend>
                 <label>
                     <select name="location">
-                        <option value="location">Choose a theater</option>
-                        <option value="location">Cinema City Iulius Mall</option>
-                        <option value="location">Cinema City Vivo</option>
+                        <option value="Choose a theater">Choose a theater</option>
+                        <option value="Cinema City Iulius Mall">Cinema City Iulius Mall</option>
+                        <option value="Cinema City Vivo">Cinema City Vivo</option>
                     </select>
                 </label>
             </fieldset>
             <br>
             <fieldset>
                 
-                <label><input type="checkbox"/>I accept terms and conditions</a></label>
+                <label><input type="checkbox"/><a href="termsandcontions.html">I accept terms and conditions</a></label>
             
             </fieldset>
             <br>
