--- a/kalai-sergiu/tema-1/index.html
+++ b/kalai-sergiu/tema-1/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Tickets to cinema</title>
+        <title>Make a reservation</title>
     </head>
     <body>
         <form>
