--- a/maria-cristinesc/tema-0/index.html
+++ b/maria-cristinesc/tema-0/index.html
@@ -4,16 +4,16 @@
      <fieldset>
         <legend>Contact details</legend>
 
-        <label for="name">firstName</label>
-        <input id="name" name="name" type="text" placeholder="Name"/>
+        <label for="firstName">First Name</label>
+        <input id="firstName" name="firstName" type="text" placeholder="First Name"/>
 
-        <label for="name">lastName</label>
-        <input id="name" name="name" type="text" placeholder="Name"/>
+        <label for="lastName">Last Name</label>
+        <input id="lastName" name="lastName" type="text" placeholder=" Last Name"/>
 
-        <label for="email">email</label>
+        <label for="email">Email</label>
         <input id="email" name="email" type="email" placeholder="Email"/>
 
-        <label for="phone">phone</label>
+        <label for="phone">Phone</label>
         <input id="phone" name="phone" type="phone" placeholder="Phone"/>
     </fieldset>
 
@@ -41,7 +41,7 @@
          <legend>Terms and conditions</legend>
 
          <label> 
-             <input name="terms" id="terms" type="checkbox"/>acceptTerms
+             <input name="acceptTerms" id="accepTerms" type="checkbox"/> I accept terms and conditions
          </label>
      </fieldset>
 
