--- a/axentioi-ovidiu-vasile/tema-1/index.html
+++ b/axentioi-ovidiu-vasile/tema-1/index.html
@@ -26,16 +26,16 @@
         <fieldset>
             <legend>Chose a movie</legend>
             <label>
-                    <input name="rating" type="radio" value="godzila"> Godzilla
+                    <input name="moviename" type="radio" value="godzila"> Godzilla
             </label>
             <label>
-                    <input name="rating" type="radio" value="aladin"> Aladin
+                    <input name="moviename1" type="radio" value="aladin"> Aladin
             </label>
             <label>
-                    <input name="rating" type="radio" value="child"> Rocketman
+                    <input name="moviename2" type="radio" value="child"> Rocketman
             </label>
             <label>
-                    <input name="rating" type="radio" value="child"> Spider-man
+                    <input name="moviename3" type="radio" value="child"> Spider-man
             </label>
         </fieldset>
 
@@ -43,17 +43,18 @@
             <legend>Choose Location</legend>
             <select name="location">
                     <option>Choose location</option>
-                    <option value="female">Cinema City - Iulius</option>
-                    <option value="man">Cinema City - Vivo</option>
+                    <option value="movielocation">Cinema City - Iulius</option>
+                    <option value="movielocation1">Cinema City - Vivo</option>
             </select>
         </fieldset>
 
         <fieldset>
             <legend>Terms and conditions</legend>
-            <input name="terms" id="terms" type="checkbox">acceptTerms
+            <input name="terms" id="terms" type="checkbox">I agree terms & conditions.
         </fieldset>
     </form>
     
     <button type="submit">Submit</button>
+    
 </body>
 </html>
