--- a/axentioi-ovidiu-vasile/tema-1/index.html
+++ b/axentioi-ovidiu-vasile/tema-1/index.html
@@ -50,7 +50,7 @@
 
         <fieldset>
             <legend>Terms and conditions</legend>
-            <input name="terms" id="terms" type="checkbox">I agree terms & conditions.
+            <input name="termsAndConditions" id="termsAndConditions" type="checkbox">I agree terms & conditions.
         </fieldset>
     </form>
     
