--- a/pop_andrei_lucian/Tema-1/index.html
+++ b/pop_andrei_lucian/Tema-1/index.html
@@ -3,6 +3,7 @@
         <title>Ticket registration</title>
     </head>
     <body>
+        <form>
         <fieldset>
             <legend>Contact details</legend>
             <label for="firstName">First Name</label>
@@ -40,5 +41,6 @@
             </fieldset>
             
             <button type="submit">Buy tickets</button>
+        </form>
     </body>
 </html>
