--- a/kalai-sergiu/tema-2/login.html
+++ b/kalai-sergiu/tema-2/login.html
@@ -5,39 +5,51 @@
         </title>
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:700&display=swap" rel="stylesheet">
         <style>
-        
+.background {
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/56/Perseid_meteor_and_Milky_Way_in_2009.jpg");
+    background-size:cover;
+    background-position: center; 
+}
 .inline {
     display: inline;
-    background-color: 255 255 255; 
+    background-color: 255 0 0; 
 }
-
 .block {
-    box-sizing: borderbox;
-    display: block;
-    width: 200px;
-    height:120px;
+    font-family: 'Noto Sans JP';
+    box-sizing: border-box;
+    border: 1px solid darkmagenta;
     box-align: center;
+    display: block;
+    width: 310px;
+    height: 400px;
+    margin: 250px 100px 10px 700px;
+    padding: 60px;
+    box-shadow: 1px 1px 1px darkmagenta;
 }
-.paragraph1 {
-    font-family:'Noto Sans JP', sans-serif;
-    font-weight: bold;
+.lostpassword{
+    padding: 5px;
+}
+.login{
+    padding:10px;
 }
         </style>
     </head>
 <body>
-    <div>
-        <p class="paragraph1"> Welcome back!<p>
-        <p class="paragraph2">Log in to continue</p>
+    <div class="block">
+    <div class="welcome">
+    <h2>Welcome back!</h2>
+    <h3>Log in to continue..</h3>
     </div>
-    <div>
+    <div class="login">
             <input class="email" id="email" name="email" type="email" placeholder="Enter email" /></br>
-            <input class="email" id="password" name="password" type="password" placeholder="Enter password"/>
+            <input class="password" id="password" name="password" type="password" placeholder="Enter password"/>
     </div>
-    <div id="password">
+    <div class="lostpassword">
     <a class="password" href="lostpassword.html">Reset password</a>
     </div>
-    <div>
+    <div class="login">
         <button class="submit" input="submit">Sign in</button>
     </div>
+</div>
 </body>
-</html>
+</html>7
