--- a/canta-patrick/tema-2/login.html
+++ b/canta-patrick/tema-2/login.html
@@ -97,6 +97,7 @@
             font-size: 15px;
             color: white;
             background-color: blue;
+            outline: none;
         }
         
         .email:focus {
