Update SignIn attempt

--- a/Cristian-Barna/tema-2-signIn/signIn.html
+++ b/Cristian-Barna/tema-2-signIn/signIn.html
@@ -2,9 +2,7 @@
     <head>
         <title>SignIn page</title>
         <style> 
-            .background{
-                background-color: gray;  
-            }
+           
             .inputWrapper{
                 font-family: 'Roboto', Helvetica, sans-serif;
                 size: 16px;
@@ -72,7 +70,7 @@
           }
         </style>
     </head>
-    <body class="block background">
+    <body class="block">
         <header>
             <h1>Welcome back!</h1>
         </header>
