--- a/crainic-ramona/tema-2/loginScreen.html
+++ b/crainic-ramona/tema-2/loginScreen.html
@@ -9,7 +9,6 @@
             }
 
             .block{
-            font-family:"Montserrat", Helvetica, serif;
             box-sizing: border-box; 
             display: block;
             border-radius: 3px;
@@ -25,7 +24,6 @@
 
             .header1{
             font-family:"Montserrat", Helvetica, serif;
-            font-weight:bolder;
             font-size: 20px;
             line-height: 20px;
             letter-spacing: 0px;
@@ -60,7 +58,6 @@
             border-left: 0ch;
             border-right: 0ch;
             box-sizing:border-box;
-            text-decoration-color:black;
             }
             
             #e-mail::placeholder {
@@ -93,7 +90,6 @@
             font-size: 15px;
             }
 
-
         </style>
     </head>
     <body class="background"> 
@@ -117,11 +113,8 @@
         <input id="password" name="password" type="password" placeholder="Password"/>
         
         <div>
-        <a class="text" target="_blank" id="target" href="">Forgot your password?</a>
+        <a class="text" target="_blank" id="text" href="">Forgot your password?</a>
         </div>
-
-        <div></div>
-        <div></div>
 
         <div>
         <button id="button" class="button">Sign in</button>   
