--- a/kalai-sergiu/tema-2/login.html
+++ b/kalai-sergiu/tema-2/login.html
@@ -28,7 +28,7 @@
     <a class="password" href="lostpassword.html">Reset password</a>
     </div>
     <div class="button">
-        <button class="submit" input="user">Log in</button>
+        <div class="button">Log in</div>
     </div>
 </div>
 </body>
