--- a/crainic-ramona/tema-2/loginScreen.html
+++ b/crainic-ramona/tema-2/loginScreen.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Login Screen</title>
-        <link href="https://fonts.googleapis.com/css?family=Raleway:200&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway:100&display=swap" rel="stylesheet">
         <style>
             .background{
