--- a/kalai-sergiu/tema-3/tema3.html
+++ b/kalai-sergiu/tema-3/tema3.html
@@ -1,46 +1,14 @@
 <html>
     <head>
         <title>Positions Tema 3</title>
-        <style>
-        
-        .box1{
-            display: flex;
-            justify-content: space-between;
-            background-color: red;
-            top:0;
-            left: 0;
-            bottom: 0;
-            width: 200px;
-            position: fixed;
-
-        }
-        .box2{
-            display: flex;
-            justify-content: space-between;
-            width: 200px;
-            left: 90vw;
-            position: fixed;
-            background-color: lightblue;
-            top: 0;
-            bottom: 0;
-        }
-        box4{
-            display: flex;
-            align-items: flex-start;
-            height: 200px;
-            background-color: green;
-            top: 0;
-            bottom: 0;
-            position: fixed;
-        }
-        </style>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
-        <div class="box5"></div>
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box3">3</div>
+        <div class="box4">4</div>
+        <div class="box5">5</div>
 
     </body>
 </html>
