--- a/kalai-sergiu/tema-4/basic challenge/basic.html
+++ b/kalai-sergiu/tema-4/basic challenge/basic.html
@@ -15,7 +15,7 @@
             width: 400px;
             height: 260px;
             background-color: #00ced1;
-            transition: 1s;
+            transition: 1s ease-in-out;
         }
     </style>
 </head>
