--- a/kalai-sergiu/tema-3/tema3.html
+++ b/kalai-sergiu/tema-3/tema3.html
@@ -4,11 +4,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <div class="box1">1</div>
-        <div class="box2">2</div>
-        <div class="box3">3</div>
-        <div class="box4">4</div>
-        <div class="box5">5</div>
-
+        <header></header>
+        <footer></footer>
     </body>
 </html>
