--- a/kalai-sergiu/tema-4/hard challenge/hard.html
+++ b/kalai-sergiu/tema-4/hard challenge/hard.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="box">
+        <div class="center"></div>
         <div class="seconnds"></div>
         <div class="minute"></div>
         <div class="hour"></div>
