--- a/marincean-adrian/Tema-04/heart-animation.html
+++ b/marincean-adrian/Tema-04/heart-animation.html
@@ -15,7 +15,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: #1f1f1f;
+            background: #404143;
             box-sizing: border-box;
         }
 
@@ -45,7 +45,7 @@
             position: absolute;
             width: 500px;
             height: 500px;
-            background-color: #F34236;
+            background-color: #EE5340;
             box-shadow: 2px 2px 2px 1px rgba(240, 22, 22, 0.5);
         }
 
@@ -65,26 +65,26 @@
         @keyframes heartbeat {
             0% {
                 transform: translate(180px, 180px) scale(1);
-                box-shadow: 0 0 0 0 rgba(255, 255, 254, 0.979);
+                /* box-shadow: 0 0 0 0 rgba(255, 255, 254, 0.979); */
   
             }
 
             25% {
                 transform: translate(180px, 180px) scale(1);
-                box-shadow: 0 0 0 0 rgb(225, 225, 254);
+                /* box-shadow: 0 0 0 0 rgb(225, 225, 254); */
 
             }
 
             30% {
                 transform: translate(180px, 180px) scale(1.4);
-                box-shadow: 0 0 0 0 rgb(225, 225, 254);
+                /* box-shadow: 0 0 0 0 rgb(225, 225, 254); */
 
 
             }
 
             50% {
                 transform: translate(180px, 180px) scale(1.2);
-                box-shadow: 0 0 0 30px rgb(225, 225, 254);
+                /* box-shadow: 0 0 0 30px rgb(225, 225, 254); */
 
 
   
@@ -92,7 +92,7 @@
 
             70% {
                 transform: translate(180px, 180px) scale(1.4);
-                box-shadow: 0 0 0 30px rgb(225, 225, 254);
+                /* box-shadow: 0 0 0 30px rgb(225, 225, 254); */
 
 
             }
