--- a/marincean-adrian/Tema-04/heart-animation.html
+++ b/marincean-adrian/Tema-04/heart-animation.html
@@ -65,26 +65,26 @@
         @keyframes heartbeat {
             0% {
                 transform: translate(180px, 180px) scale(1);
-                /* box-shadow: 0 0 0 0 rgba(255, 255, 254, 0.979); */
+                box-shadow: 0 0 0 0 rgba(255, 255, 254, 0.979);
   
             }
 
             25% {
                 transform: translate(180px, 180px) scale(1);
-                /* box-shadow: 0 0 0 0 rgb(225, 225, 254); */
+                box-shadow: 0 0 0 0 rgb(225, 225, 254);
 
             }
 
             30% {
                 transform: translate(180px, 180px) scale(1.4);
-                /* box-shadow: 0 0 0 0 rgb(225, 225, 254); */
+                box-shadow: 0 0 0 0 rgb(225, 225, 254);
 
 
             }
 
             50% {
                 transform: translate(180px, 180px) scale(1.2);
-                /* box-shadow: 0 0 0 30px rgb(225, 225, 254); */
+                box-shadow: 0 0 0 30px rgb(225, 225, 254);
 
 
   
@@ -92,14 +92,14 @@
 
             70% {
                 transform: translate(180px, 180px) scale(1.4);
-                /* box-shadow: 0 0 0 30px rgb(225, 225, 254); */
+                box-shadow: 0 0 0 30px rgb(225, 225, 254);
 
 
             }
 
             90% {
                 transform: translate(180px, 180px) scale(1);
-                /* box-shadow: 0 0 0 0 rgb(225, 225, 254); */
+                box-shadow: 0 0 0 0 rgb(225, 225, 254);
 
             }
 
