--- a/crainic-ramona/tema-7/basicChallengeArrays.html
+++ b/crainic-ramona/tema-7/basicChallengeArrays.html
@@ -11,8 +11,8 @@
         console.log(positiveNumbers);
 
         var sum = 0;
-            for (var i = 1; i <= 5; i++) {
-                sum = sum + i;
+            for (var i = 0; i < positiveNumbers.length; i++) {
+                sum = sum + positiveNumbers[i];
             };
 
         console.log(sum);
