--- a/crainic-ramona/tema-7/basicChallengeArrays.html
+++ b/crainic-ramona/tema-7/basicChallengeArrays.html
@@ -3,7 +3,7 @@
         <title>Sum of positive numbers</title>
         <script>
 
-        var array = [1,2,3,4,5,-1,-2,-1,-4,-5];
+        var array = [1,2,7,4,9,-1,-2,-1,-4,-5];
         var positiveNumbers = array.filter(number => {
         return number >= 0;
         });
@@ -11,8 +11,8 @@
         console.log(positiveNumbers);
 
         var sum = 0;
-            for (var i = 1; i <= 5; i++) {
-                sum = sum + i;
+            for (var i = 0; i < positiveNumbers.length; i++) {
+                sum = sum + positiveNumbers[i];
             };
 
         console.log(sum);
