--- a/alina-popa/tema-7/index.html
+++ b/alina-popa/tema-7/index.html
@@ -1,21 +1,49 @@
 <html>
+    <head>
+        <title>tema-7</title>
+       
+    </head>
+    <body>
+  
+<body>
+  <form name="converter">
+    m: <input type="text" name="m" onChange="mConverter()"><br />
+    Inch: <input type="text" name="inch" onChange="inchConverter()"><br />
+    <input type="button" value="Convert!" />
+    </form>
 
-<head>
-    <title>Animals</title>
-    <script>
-        var animal = {
-            type: "Dog",
-            name: "Rex",
-            gut: "Meat"
-        }
-        console.log(animal);
-        var food = {
-            eat: "food",
-            type: "Bones",
-        }
-        console.log(food);
+<h2>JavaScript Celcius to Fahrenhet</h2>
 
-    </script>
-</head>
+<p>Insert a number into one of the input fields below:</p>
 
+<p><input id="c" onkeyup="convert('C')"> degrees Celsius</p>
+
+<p><input id="f" onkeyup="convert('F')"> degrees Fahrenheit</p> 
+
+
+<script>
+ function mConverter() {
+document.converter.inch.value = document.converter.m.value / 2.54
+document.converter.feet.value = document.converter.m.value / 30.48
+}
+function inchConverter(){
+document.converter.m.value = document.converter.inch.value * 2.54
+document.converter.feet.value = document.converter.inch.value / 12
+}
+
+function convert(degree) {
+  var x;
+  if (degree == "C") {
+    x = document.getElementById("c").value * 9 / 5 + 32;
+    document.getElementById("f").value = Math.round(x);
+  } 
+  
+  else {
+    x = (document.getElementById("f").value -32) * 5 / 9;
+    document.getElementById("c").value = Math.round(x);
+  }
+}
+</script>
+
+</body>
 </html>
