--- a/kalai-sergiu/tema-6/tema-6.html
+++ b/kalai-sergiu/tema-6/tema-6.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Basic Challange/title>
+    <title>Basic Challange</title>
 </head>
 <body>
     <script>
-var i;
-for (i = 0; i < 10; i++) {
-  console.log(i);
-}
-    </script>
-    
-<body>
+            for (var i = 1; i < 100; i++) {
+            if (i % 3 === 0) {
+                console.log(i);
+                }
+            };
+        </script>
+</body>
 </html>
