--- a/kalai-sergiu/tema-9/tema-9.html
+++ b/kalai-sergiu/tema-9/tema-9.html
@@ -10,7 +10,8 @@
             .title {
             margin-left: 40%;
             font-size: 56px;
-            background: -webkit-linear-gradient(black,crimson);
+            background: 
+            -webkit-linear-gradient(black,crimson);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             }
